<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2020 The Xiaomi-SDM660 Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="vibration"
        android:title="@string/vibration_title">

        <co.aospa.settings.device.preferences.VibrationSeekBarPreference
            android:defaultValue="80"
            android:key="vibration_strength"
            android:max="100"
            android:title="@string/vibration_strength_title"
            app:min="1"
            app:units="%" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="notification_led"
        android:title="@string/notification_title">

        <co.aospa.settings.device.preferences.NotificationLedSeekBarPreference
            android:defaultValue="100"
            android:key="notification_led_brightness"
            android:max="100"
            android:title="@string/notification_led_title"
            app:min="1"
            app:units="%" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="display"
        android:title="@string/display_title">

        <Preference
            android:icon="@drawable/ic_color"
            android:key="device_kcal"
            android:persistent="false"
            android:title="@string/device_kcal_title">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="co.aospa.settings.kcal.KCalSettingsActivity"
                android:targetPackage="co.aospa.settings.kcal" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="thermal_profile"
        android:title="@string/thermal_profile_title">

        <co.aospa.settings.device.preferences.SecureSettingListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/thermal_dialogTitle"
            android:entries="@array/thermal_profiles"
            android:entryValues="@array/thermal_values"
            android:icon="@drawable/ic_thermal"
            android:key="thermal"
            android:summary="@string/thermal_summary"
            android:title="@string/thermal_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="hall_wakeup"
        android:title="@string/hall_wakeup_title">

        <co.aospa.settings.device.preferences.SecureSettingSwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_flip"
            android:key="hall"
            android:summary="@string/hall_wakeup_summary"
            android:title="@string/hall_title" />
    </PreferenceCategory>
</PreferenceScreen>
