<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2020 The Xiaomi-SDM660 Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto">

    <co.aospa.settings.device.preferences.SecureSettingSwitchPreference
        android:defaultValue="false"
        android:key="kcal_enabled"
        android:title="@string/kcal_disabled"
        settings:allowDividerAbove="true" />

    <PreferenceCategory
        android:key="cat_colormanagement"
        android:title="@string/cat_colormanagement">

        <co.aospa.settings.device.preferences.SecureSettingCustomSeekBarPreference
            android:defaultValue="255"
            android:dependency="kcal_enabled"
            android:key="color_red"
            android:max="255"
            android:title="@string/color_red" />

        <co.aospa.settings.device.preferences.SecureSettingCustomSeekBarPreference
            android:defaultValue="255"
            android:dependency="kcal_enabled"
            android:key="color_green"
            android:max="255"
            android:title="@string/color_green" />

        <co.aospa.settings.device.preferences.SecureSettingCustomSeekBarPreference
            android:defaultValue="255"
            android:dependency="kcal_enabled"
            android:key="color_blue"
            android:max="255"
            android:title="@string/color_blue" />

        <co.aospa.settings.device.preferences.SecureSettingCustomSeekBarPreference
            android:defaultValue="35"
            android:dependency="kcal_enabled"
            android:key="color_minimum"
            android:max="255"
            android:title="@string/color_minimum" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="cat_calibration"
        android:title="@string/cat_calibration">

        <co.aospa.settings.device.preferences.SecureSettingCustomSeekBarPreference
            android:defaultValue="35"
            android:dependency="kcal_enabled"
            android:key="saturation"
            android:max="158"
            android:title="@string/saturation" />

        <co.aospa.settings.device.preferences.SecureSettingCustomSeekBarPreference
            android:defaultValue="127"
            android:dependency="kcal_enabled"
            android:key="value"
            android:max="255"
            android:title="@string/value" />

        <co.aospa.settings.device.preferences.SecureSettingCustomSeekBarPreference
            android:defaultValue="127"
            android:dependency="kcal_enabled"
            android:key="contrast"
            android:max="255"
            android:title="@string/contrast" />

        <co.aospa.settings.device.preferences.SecureSettingCustomSeekBarPreference
            android:defaultValue="0"
            android:dependency="kcal_enabled"
            android:key="hue"
            android:max="1536"
            android:title="@string/hue" />

        <co.aospa.settings.device.preferences.SecureSettingSwitchPreference
            android:defaultValue="false"
            android:dependency="kcal_enabled"
            android:key="grayscale"
            android:title="@string/grayscale" />
    </PreferenceCategory>
</PreferenceScreen>
